# geowatch

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci-smart.yml  .gitlab-ci.yml  .gitmodules  .mailmap  .readthedocs.yml  .rules.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  README.rst  all-cp311-loose-transitive.txt  clean.sh  conda_env.yml  conftest.py  data.kwcoco.json  pyproject.toml  pytest.ini  requirements  requirements.txt  run_developer_setup.sh  run_doctests.sh  run_linter.sh  run_tests.py  setup.py  torch_package_playground.ipynb
.gitlab/: components.yml
.transcrypt/: config
aws/: README.rst  build_base_ta2_train_image.sh  build_trainer_docker_image.sh  continuous_sync_to_s3.sh  dvc_access_check.yml  dvc_and_aws.txt  dvc_check_workflow.yml  hello-workflow.yaml  install_aws_local_requirements.sh  permission_notes.txt  sample_dvc_setup.sh  setup_secrets.sh  setup_smartflow.sh  smartflow_notes.rst  smartwatch_s3_sync.sh  submit_argo_jobs.sh  ta2_train_template.yml  ta2_train_workflow.yml  train_remote_entrypoint.sh  train_remote_init.sh  train_workflow.yml
dev/: _debug_missing_saliency_2022-04-22.sh  align_tiles_demo.py  bench_parser.py  check_filesys_iteration_time.py  check_transition_probs.py  ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  clean_kwcoco_dataset.py  debug_coco_geo_img.py  demo_accum_grads.py  deprecated_util_raster.py  devcheck_align_geotiff_utils.py  devcheck_associate_images.py  devcheck_coordinate_transform.py  devcheck_cv2_tracker.py  devcheck_dataframe_image.py  devcheck_loadtime.py  devcheck_long_time_series.py  devcheck_sensor_stats.py  devcheck_torch_package.py  devcheck_track_viz.py  devcheck_vid_info.py  devcheck_weighted_stitcher.py  dvc_remote_notes.sh  fix_models.py  fixup_gdal_dep_issues.sh  fixup_models.py  giffify_stacked.py  gpg_owner_trust.enc  hack_compress_images.py  hacks_fix_broken_geotiff_crops.py  horologic_flash_setup.sh  lint.py  live_processing_slide_viz.py  loss_functions.py  make_reqs_from_conda.py  make_strict_req.sh  manual_image_stack.py  notes.txt  old_align_script_invocations.sh  (+14 more)
dockerfiles/: geowatch.Dockerfile  pyenv.Dockerfile  ta1_coreg_brdf.Dockerfile  ta1_fmask_and_angles.Dockerfile  ta1_planet_coreg.Dockerfile  ta2_features.Dockerfile  ta2_training_v2.Dockerfile  uv.Dockerfile  watch.Dockerfile
docs/: README.rst  access_dvc_repos.rst  coding_conventions.rst  coding_oddities.rst  coding_tips.rst  contribution_instructions.rst  fusion_overview.rst  getting_started_aws.rst  getting_started_dvc.rst  getting_started_kubectl.rst  getting_started_smartflow.rst  getting_started_ssh_keys.rst  install_python_conda.rst  install_python_pyenv.rst  installing_watch.rst  internal_resources.rst  mlops.md  onboarding.rst  pyenv_alternative.rst  rebasing_procedure.md  rebasing_procedure.rst  rebasing_proceude.md  sensorchan_specs.rst  smartflow_running_the_system.rst  smartflow_training_fusion_models.md  structure_proposal.md  supporting_projects.rst  ta2_deep_dive_info.md  ta2_feature_integration.md  testing_practices.rst  watch_cli.rst
examples/: feature_fusion_tutorial.sh  find_wv_images_for_pan_shapren.py  grab_image_and_masks_for_regions.py  kwcoco_dynamic_resolution.py  kwcoco_footprints.py  kwcoco_resample.py  load_kwcoco_image.py  load_spacetime_region.py  mlops_v3_usage.py  mwe_ndsampler_load_region.py  reproduce_baseline_tutorial.sh  task_predict_outputs.py
geowatch/: __init__.py  __main__.py  exceptions.py  heuristics.py
geowatch_tpl/: README.rst  __init__.py  snapshot_submodules.py
requirements/: aws.txt  cold.txt  conda-pip.txt  development.txt  dvc.txt  dvc_and_aws.txt  gdal.txt  graphics.txt  headless.txt  linting.txt  materials.txt  mmcv.txt  no-deps.txt  optional.txt  problem-deps.txt  problematic.txt  production.txt  python_build_tools.txt  runtime.txt  simple-deps.txt  tensorflow.txt  tests.txt  transitive_runtime.txt
scripts/: README.md  align_tiles_demo.py  baseline_framework_coreg.json  clean_drop3.py  coco_add_watch_fields.py  coco_align_geotiffs.py  coco_extract_geo_bounds.py  coco_transfer_metadata.py  dataset_splits.sh  deadline_2020-02-08.sh  diagnostics.py  filter_sc_baseline_to_crops.py  generate_ta2_features.sh  geojson_to_kwcoco.py  geotiffs_to_kwcoco.py  get_reference_stac_items.py  grab_tiles_demo.py  july_deliverable_ta1_chain.json  july_deliverable_ta2_chain.json  make_reqs_from_conda.py  make_sc_region_files.py  make_splits_with_small_site_positives.py  namek_sc_model_selection.sh  normalize_bundle.py  prep_drop1_ta1.sh  prepare_drop1_level1.sh  prepare_drop1_ta1.sh  prepare_drop3.sh  prepare_drop4.sh  prepare_drop5.sh  prepare_drop6.sh  prepare_drop7.sh  prepare_drop7_imerit.sh  prepare_drop7_sc_baseline.sh  prepare_drop7_sc_dataset.sh  prepare_drop7_smooth.sh  prepare_drop8_ARA.sh  prepare_drop8_L2.sh  prepare_updated_drop7.sh  run_apply_mtra_streaming.py  (+36 more)
secrets/: install_watch_on_ec2.sh  secrets  setup_instructions.md
temporal_alignment/: .gitignore  S7_sort.py  drop0_datasets.py  drop1_datasets.py  extract_features.py  time_sort_drop0.py  utils.py
tests/: test_ac_refine.py  test_cli.py  test_coco_align.py  test_geomodels.py  test_heterogeneous_model.py  test_ignore_buffer_region.py  test_import.py  test_init_from_pretrained.py  test_kwcoco_dataloader.py  test_kwcoco_dataset.py  test_lightning_cli_fit.py  test_load_models.py  test_mlops_aggregate.py  test_mlops_pipeline.py  test_mlops_scheduler.py  test_multimodal_model.py  test_predict_dummy_model.py  test_predict_latest_models.py  test_predict_old_fusion_model.py  test_predict_override_meanstd.py  test_predict_small_region.py  test_predict_with_dynamic_channels.py  test_prepare_teamfeats.py  test_recurring_sites_in_tracker.py  test_reproject_annotations.py  test_save_packages.py  test_sensor_metadata.py  test_time_sampler.py  test_tracker.py  test_version.py  test_watch_stats.py
tutorial/: README.md  README.rst  feature_fusion_tutorial.sh  toy_experiments_msi.sh  toy_experiments_msi_v2.sh  toy_experiments_rgb.sh  tutorial1_rgb_network.ipynb  tutorial1_rgb_network.sh  tutorial2_msi_network.sh  (+4 more)
(+2723 files in other folders)
