[build-system]
requires = [ "setuptools>=41.0.1", "wheel>=0.37.1"]

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "gitlab", "purepy", "kitware", "cv2", "gdal",]
mod_name = "watch"
repo_name = "watch"
rel_mod_parent_dpath = "."
os = [ "linux",]
min_python = 3.8

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [
    "default",
    "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
    "ignore:.*Define the __nice__ method for.*:Warning",
    "ignore:.*private pytest class or function.*:Warning",
    "ignore:.*The `srun` command is available",
    "ignore:.*TypedStorage is deprecated.*",
    "ignore:.*Call to deprecated create function FieldDescriptor.*",
    "ignore:.*Call to deprecated create function Descriptor.*",
    "ignore:.*Call to deprecated create function FileDescriptor.*",
    "ignore:.*Call to deprecated create function EnumDescriptor.*",
    "ignore:.*Call to deprecated create function EnumValueDescriptor.*",
    "ignore:.*google.rpc.*",
    "ignore:.*FitHarnPreferences.*",
    "ignore:.*Skipping val loop.*",
    "ignore:.*does not have many workers.*",
    "ignore:.*GPU available but not used.*",
    "ignore:.*distutils Version classes are deprecated.*",
    "ignore:.*'cgi' is deprecated and slated for removal.*",
    "ignore:.*'urllib3.contrib.pyopenssl' module is deprecated.*",
    "ignore:.*pkg_resources.declare_namespace('google').*",
    "ignore:.*pkg_resources.declare_namespace('mpl_toolkits').*",
    "ignore:.*pkg_resources.declare_namespace('ruamel').*",
    "ignore:.*pkg_resources.declare_namespace('sphinxcontrib').*",
    "ignore:.*pkg_resources.declare_namespace('zc').*",
    "ignore:.*pkg_resources.declare_namespace('lightning_fabric').*",
    "ignore:.*pkg_resources.declare_namespace('pytorch_lightning').*",
    "ignore:.*pkg_resources.*",
    "ignore:.*Please install grpcio-status.*",
    "ignore:.*monai/utils/module.py*",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__", 
]
