[build-system]
requires = [ "setuptools>=41.0.1", "wheel>=0.37.1"]

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "gitlab", "purepy", "kitware", "cv2", "gdal",]
author = "GeoWATCH developers, Kitware Inc., Jon Crall"
author_email = "kitware@kitware.com, jon.crall@kitware.com"
description = "The geowatch module"
mod_name = "geowatch"
repo_name = "geowatch"
rel_mod_parent_dpath = "."
os = [ "linux",]
min_python = '3.10'
max_python = '3.13'
ci_cpython_versions = ['3.10', '3.11', '3.13']
url = 'https://gitlab.kitware.com/computer-vision/geowatch'
test_variants = ['full-loose', 'full-strict']
typed = 0  # todo
render_doc_images = 1
license = "Apache 2"
dev_status = "beta"
test_command = 'python -m pytest --verbose -p pytester -p no:doctest --xdoctest --cov-config ../pyproject.toml --cov-report term --cov="$MOD_NAME" "$MOD_DPATH" ../tests --durations=100'

[tool.xcookie.entry_points]
# the console_scripts entry point creates the xdoctest executable
console_scripts = [
    "geowatch= geowatch.cli.__main__:main",
    "geowatch_dvc= geowatch.cli.find_dvc:_CLI.main",
]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=geowatch_tpl --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [
    "default",
    "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
    "ignore:.*Define the __nice__ method for.*:Warning",
    "ignore:.*private pytest class or function.*:Warning",
    "ignore:.*The `srun` command is available",
    "ignore:.*TypedStorage is deprecated.*",
    "ignore:.*Call to deprecated create function FieldDescriptor.*",
    "ignore:.*Call to deprecated create function Descriptor.*",
    "ignore:.*Call to deprecated create function FileDescriptor.*",
    "ignore:.*Call to deprecated create function EnumDescriptor.*",
    "ignore:.*Call to deprecated create function EnumValueDescriptor.*",
    "ignore:.*google.rpc.*",
    "ignore:.*FitHarnPreferences.*",
    "ignore:.*Skipping val loop.*",
    "ignore:.*does not have many workers.*",
    "ignore:.*GPU available but not used.*",
    "ignore:.*distutils Version classes are deprecated.*",
    "ignore:.*'cgi' is deprecated and slated for removal.*",
    "ignore:.*'urllib3.contrib.pyopenssl' module is deprecated.*",
    "ignore:.*pkg_resources.declare_namespace('google').*",
    "ignore:.*pkg_resources.declare_namespace('mpl_toolkits').*",
    "ignore:.*pkg_resources.declare_namespace('ruamel').*",
    "ignore:.*pkg_resources.declare_namespace('sphinxcontrib').*",
    "ignore:.*pkg_resources.declare_namespace('zc').*",
    "ignore:.*pkg_resources.declare_namespace('lightning_fabric').*",
    "ignore:.*pkg_resources.declare_namespace('pytorch_lightning').*",
    "ignore:.*pkg_resources.*",
    "ignore:.*Please install grpcio-status.*",
    "ignore:.*monai/utils/module.py*",
]

[tool.coverage.run]
branch = true
omit = [
    #"geowatch/stac/_notebook.py",
    #"geowatch/mlops/_notebook.py",
    #"geowatch/tasks/fusion/datamodules/_notebook.py",
    #"geowatch/tasks/fusion/datamodules/temporal_sampling/_notebook.py",

    # Not covered, because these will likely be refactored or factored out
    "*geowatch/tasks/change_detection/*",
    "*geowatch/tasks/rutgers_material_seg/*",
    "*geowatch/tasks/rutgers_material_seg_v2/*",
    "*geowatch/tasks/rutgers_material_change_detection/*",
    "*geowatch/tasks/super_res/*",
    "*geowatch/utils/lightning_ext/_jsonargparse_ext_ge_4_21_and_lt_4_22.py",
    "*geowatch/utils/lightning_ext/_jsonargparse_ext_ge_4_22_and_lt_4_24.py",
    "*geowatch/utils/lightning_ext/_jsonargparse_ext_ge_4_24_and_lt_4_xx.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
    "def __repr__", 
]

